docs: #1 .gitignore 내용 추가
.gitignore에 .yml 관련 내용을 추가하였다.

--- a/.gitignore
+++ b/.gitignore
@@ -175,4 +175,10 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+### application.yml
+# dev
+src/main/resources/application-dev.yml
+# prod
+src/main/resources/application-prod.yml
+
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,macos
