chore: #10 build.gradle maria-db 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	// Mysql
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+    // Maria
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
