chore: build.gradle firebase 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,9 @@ dependencies {
 	// Gson
 	implementation 'com.google.code.gson:gson:2.10.1'
 
+    // FCM
+    implementation 'com.google.firebase:firebase-admin:9.2.0'
+
 	// Spring Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
